manifests/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: axion-ui
  namespace: axion-app
spec:
  replicas: 2

  strategy:
    type: RollingUpdate
    rollingUpdate:
      maxSurge: 1
      maxUnavailable: 1


  selector:
    matchLabels:
      app: axion-ui

  template:
    metadata:
      labels:
        app: axion-ui

    spec:
      containers:
      - name: axion-ui
        image: acrtodoappjay.azurecr.io/axion-ui:v1
        imagePullPolicy: Always
        ports:
        - containerPort: 80

        readinessProbe:
          httpGet:
            path: /
            port: 80
          initialDelaySeconds: 6
          periodSeconds: 10
        
        livenessProbe:
          httpGet:
            path: /
            port: 80
          initialDelaySeconds: 7
          periodSeconds: 10
