manifests/service.yml
apiVersion: v1
kind: Service
metadata:
  name: axion-ui
  namespace: axion-app
spec:
  type: ClusterIP
  selector:
    app: axion-ui
  ports:
    - port: 80
      targetPort: 80
