manifests/ingress.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: axion-ui-ingress
  namespace: axion-app
spec:
  ingressClassName: azure-application-gateway
  rules:
  - host: axion-ui.jaydeep.shop
    http:
      paths:
      - pathType: Prefix
        path: "/"
        backend:
          service:
            name: axion-ui
            port: 
              number: 80
